--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,12 @@
     },
     "require": {
     "brain/monkey": "2.*",
-    "phpunit/phpunit": "^9.1"
+    "phpunit/phpunit": "^9.1",
+    "inpsyde/php-coding-standards": "^1.0@dev"
     },
+     
+         
+   
     "autoload": {
         "psr-4": {
             "SimVirtualpage\\":""
